deployment/kubernetes-aws/services/backend-feed.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-feed
spec:
  selector:
    app: udagram
    service: backend-feed
  ports:
  - port: 8080
    targetPort: 8080
    protocol: "TCP"
