deployment/kubernetes-aws/services/backend-user.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-user
spec:
  selector:
    app: udagram
    service: backend-user
  ports:
  - port: 8080
    targetPort: 8080
    protocol: "TCP"
