deployment/kubernetes-aws/services/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: udagram.local
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80       
      - path: /api/v0/feed
        backend:
          serviceName: backend-feed
          servicePort: 8080
      - path: /api/v0/users
        backend:
          serviceName: backend-user
          servicePort: 8080
